--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "front-end-dolla",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://midynoob.github.io",
+  "homepage": "",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -11,7 +11,7 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "react-scroll": "^1.8.2",
     "styled-components": "^5.3.0",
     "web-vitals": "^1.0.1"
@@ -22,7 +22,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-  "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
